Fragmenting the old slide.

--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
 
           <div>
             <ul>
-              <li>William Shakespeare</li>
+              <li class="fragment">William Shakespeare</li>
 
-              <li>George Orwell</li>
+              <li class="fragment">George Orwell</li>
 
-              <li>Oscar Wilde</li>
+              <li class="fragment">Oscar Wilde</li>
 
-              <li>William Faulkner</li>
+              <li class="fragment">William Faulkner</li>
 
-              <li>e.e. cummings</li>
+              <li class="fragment">e.e. cummings</li>
             </ul><br>
           </div>
 
@@ -189,7 +189,7 @@
             <br>
           </div>
 
-          <div>
+          <div class="fragment">
             are all copyright free.&nbsp;
           </div>
         </section>
